fix(ui) Fix z-index stacking of modals and assistant cues (#13544)
Assistant cues should stack *under* modal windows as modal windows
should be focusing the user on the current task. Having an assistant
overlay on top only distracts and confuses people.

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -1807,6 +1807,13 @@ ul.radio-inputs {
 */
 .modal-backdrop {
   background-color: @gray-dark;
+  // Match zIndex.modal in theme.jsx
+  z-index: 10000;
+}
+
+.modal {
+  // Match zIndex.modal in theme.jsx
+  z-index: 10000;
 }
 
 .modal-container {
